# lizmap-plugin

./: .force-transifex-update  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .hgtags  .pre-commit-config.yaml  .qgis-plugin-booster  .qgis-plugin-ci  .travis.yml  CHANGELOG.md  MANIFEST.in  MANIFEST.in.x  Makefile  PROPOSED_PLAN.md  README.md  SimpleFTPMirror.py  __init__.py  changelog.txt  documentation.txt  html_and_expressions.py  lizmap.cfg  lizmap.pro  lizmap.py  lizmap_dialog.py  lizmap_popup_dialog.py  lizmapdialog.py  lizmappopupdialog.py  metadata.txt  nose2.cfg  plugin_upload.py  pyproject.toml  qgis_sample_project.qgs.cfg  readme.txt  release.sh  requirements-dev.txt  requirements.txt  resources.py  resources.qrc  (+16 more)
.docker/: docker-compose.yml  exec.sh  requirements.txt  run-tests.sh  start.sh  stop.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  push_translations_to_github.sh
.github/ISSUE_TEMPLATE/: 1_feature_request.md  2_bug.md  2_bug.yml  3_question.md  4_lizmap_web_client.md
.github/workflows/: ci.yml  flake8.yml  release-package.yml  release.yml  stale.yml  test-qgis-desktop.yml  test-qgis-server.yml  tests.yml  transifex.yml
.lizcloud/: .gitlab-ci.yml  fabric.mk  factory.mk
definitions/: atlas.py  attribute_table.py  base.py  dataviz.py  edition.py  filter_by_login.py  locate_by_layer.py  time_manager.py  tooltip.py
docker/: start_container.sh
forms/: __init__.py  atlas_edition.py  attribute_table_edition.py  base_edition_dialog.py  dataviz_edition.py  edition_edition.py  filter_by_form_edition.py  filter_by_login.py  locate_layer_edition.py  table_manager.py  time_manager_edition.py  tooltip_edition.py
help/: help-en.html  help-fr.html
help/source/: conf.py  index.rst
i18n/: lizmap_cs.qm  lizmap_cs.ts  lizmap_de.qm  lizmap_de.ts  lizmap_el.qm  lizmap_el.ts  lizmap_en.qm  lizmap_en.ts  lizmap_es.qm  lizmap_es.ts  lizmap_eu.qm  lizmap_eu.ts  lizmap_fi.qm  lizmap_fi.ts  lizmap_fr.qm  lizmap_fr.ts  lizmap_gl.qm  lizmap_gl.ts  lizmap_hu.qm  lizmap_hu.ts  lizmap_it.qm  lizmap_it.ts  lizmap_nl.qm  lizmap_nl.ts  lizmap_no.qm  lizmap_no.ts  lizmap_pl.qm  lizmap_pl.ts  lizmap_pt.qm  lizmap_pt.ts  lizmap_pt_BR.qm  lizmap_pt_BR.ts  lizmap_ro.qm  lizmap_ro.ts  lizmap_ru.qm  lizmap_ru.ts  lizmap_sl.qm  lizmap_sl.ts  lizmap_sv.qm  lizmap_sv.ts
lizmap/: LICENSE  __init__.py  dialog_server_form.py  drag_drop_dataviz_manager.py  html_and_expressions.py  lizmap.py  lizmap_popup_dialog.py  log_panel.py  logger.py  metadata.txt  ogc_project_validity.py  plausible.py  plugin.py  plugin_manager.py  project_checker_tools.py  qt_style_sheets.py  saas.py  server_dav.py  server_ftp.py  server_lwc.py  tools.py  tooltip.py  version_checker.py
lizmap/config/: __init__.py  config.py  global_options.py  layer_options.py  models.py
lizmap/definitions/: atlas.py  attribute_table.py  base.py  dataviz.py  definitions.py  dxf_export.py  edition.py  filter_by_form.py  filter_by_login.py  filter_by_polygon.py  layouts.py  lizmap_cloud.py  locate_by_layer.py  online_help.py  portfolio.py  qgis_settings.py  time_manager.py  tooltip.py  warnings.py
lizmap/dialogs/: confirmation_text_box.py  dock_html_preview.py  download_from_url.py  download_project.py  drag_drop_dataviz_container.py  html_editor.py  html_maptip.py  lizmap_popup.py  main.py  new_version.py  news.py  scroll_message_box.py  server_form.py  server_wizard.py  wizard_group.py  wizard_group_dialog.py
lizmap/forms/: __init__.py  atlas_edition.py  attribute_table_edition.py  base_edition_dialog.py  dataviz_edition.py  dxf_export_edition.py  edition_edition.py  filter_by_form_edition.py  filter_by_login.py  filter_by_polygon.py  folio_portfolio_edition.py  layout_edition.py  layout_portfolio_edition.py  locate_layer_edition.py  portfolio_edition.py  table_manager.py  table_manager_dataviz.py  table_manager_layouts.py  time_manager_edition.py  tooltip_edition.py  trace_dataviz_edition.py
lizmap/i18n/: lizmap_qgis_plugin_cs.qm  lizmap_qgis_plugin_de.qm  lizmap_qgis_plugin_el.qm  lizmap_qgis_plugin_es.qm  lizmap_qgis_plugin_eu.qm  lizmap_qgis_plugin_fi.qm  lizmap_qgis_plugin_fr.qm  lizmap_qgis_plugin_gl.qm  lizmap_qgis_plugin_hu_HU.qm  lizmap_qgis_plugin_id.qm  lizmap_qgis_plugin_it.qm  lizmap_qgis_plugin_nl.qm  lizmap_qgis_plugin_no.qm  lizmap_qgis_plugin_pl_PL.qm  lizmap_qgis_plugin_pt.qm  lizmap_qgis_plugin_pt_BR.qm  lizmap_qgis_plugin_ro.qm  lizmap_qgis_plugin_ru.qm  lizmap_qgis_plugin_sl.qm  lizmap_qgis_plugin_sv_SE.qm  (+1 more)
lizmap_api/: commands.py  config.py
pytransifex/: __init__.py  api.py  exceptions.py
qgis_plugin_booster_testing/: __init__.py  metadata.txt  qgis_plugin_booster_testing_plugin.py  resources.qrc
qgis_plugin_ci_testing/: __init__.py  metadata.txt  qgis_plugin_ci_testing_plugin.py
qgispluginbooster/: parameters.py  release.py  translation.py  utils.py
qgispluginci/: exceptions.py  parameters.py  plugins.xml.template  release.py  translation.py  utils.py
requirements/: DO_NOT_MODIFY_FILES.md  dev.txt  lint.txt  packaging.txt  test.txt  tests.txt
scripts/: compile-strings.sh  qgis-plugin-booster  qgis-plugin-ci  qgis_plugin_ci.py  release.sh  update-strings.sh  update_compiled_strings.sh  update_strings.sh
templates/: plugins.xml.template
test/: plugins.xml.expected  test_code_layout.py  test_dialog_edition.py  test_release.py  test_table_form.py  test_table_manager.py  test_tooltip.py  test_translation.py  test_ui.py
tests/: .gitignore  README.md  compat.py  conftest.py  credentials.example.py  pytest.ini  qgis_testing.py  test_code_layout.py  test_definitions.py  test_dialog_edition.py  test_drag_drop_dataviz.py  test_dxf_export.py  test_html_editor.py  test_layer_tree.py  test_ogc_project_validity.py  test_postgresql.py  test_project_checker_tools.py  test_pyplugin_installer.py  test_saas.py  test_table_checks.py  test_table_manager.py  test_toolbelt.py  test_tools.py  test_tooltip.py  test_trace_dialog.py  test_ui.py  test_version_info.py  test_webdav.py  test_wizard.py  test_wizard_server.py  utils.py
winscp435/: WinSCP.com  WinSCP.ini
(+469 files in other folders)
