[project]
name = "Lizmap"
description = "Publish and share your QGIS maps on the Web via Lizmap Web Client"
authors = [
    { name = "3Liz", email = "info@3liz.com" }
]
version = "5.0.0-alpha.3+pre"
requires-python = ">= 3.9"
license = "GPL-2.0-only"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
homepage = "https://docs.lizmap.com"
repository ="https://github.com/3liz/lizmap-plugin"
"Bug Reports" = "https://github.com/3liz/lizmap-plugin/issues"


[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
]
tests = [
    "pytest >= 5.3",
    "webdavclient3",
    "psycopg[binary]",
]
lint = [
    "ruff",
    "mypy",
    "bandit",
    "vulture",
]
packaging = [
    "qt-transifex; python_full_version >= '3.12'",
]

[tool.uv.sources]
qt-transifex =  { git = "https://github.com/3liz/qt-transifex" }

[tool.yapt]
plugin_source = "lizmap"

[tool.qt-transifex]
plugin_source = "lizmap"
organization = "3liz-1"
project = "lizmap-locales"
resource = "lizmap_qgis_plugin"
minimum_translation = 25.0

#
# Ruff
#
# https://doc.astral.sh/ruff/configuration
#

[tool.ruff]
line-length = 110
target-version = "py39"
exclude = [
    ".venv",
    ".local",
    "tests/.*",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
extend-select = [
    "E", "F", "I", "ANN", "W", "T", "COM", "RUF",
    "C4", "SIM", "TC", "RET",
]
# COM812 conflict with formatter
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN401", # Dynamically typed expressions (Any)
    "COM812",
    "SIM108",  # Use of ternary operator
    "SIM102",  # Use a single if
    # TODO: Temporary ignore linter errors until
    # they are fixed
    "T201",
    "E20",     # Whitespace before/after element
    "E501",    # Line too long
    "RUF012",  # Mutable class attributes should be annotated
    "RUF067",  # `__init__` module should only contain docstrings and re-exports
    "C4",
]
allowed-confusables = ["’"]  # Used in parsing methods

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    "ANN201",
]

[tool.ruff.lint.isort]
lines-between-types = 1
known-third-party = [
    "qgis",
]
order-by-type = true

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true

#
# Mypy
#
[tool.mypy]
python_version = "3.9"

[[tool.mypy.overrides]]
module = "qgis.*"
ignore_missing_imports = true
